feat: create docs api tickets and events
